Start of string anchor #rr8