@@ -6,6 +6,7 @@ import java.util.ArrayList;
 public class PatternMatcher {
     public static boolean matchPattern(String inputLine, String pattern) {
         ArrayList<RegexMatcher> regex = new ArrayList<>();
+        boolean isStart = false;
         for (int i = 0; i < pattern.length(); i++) {
             if (pattern.charAt(i) == '\\') {
                 i++;
@@ -24,17 +25,32 @@ public class PatternMatcher {
                     regex.add(new RangeMatcher(sub));
                 }
                 i = endIndex;
-            } else {
+            } else if (pattern.charAt(i) == '^') {
+                isStart = true;
+            }
+            else {
                 regex.add(new CharacterMatcher(pattern.charAt(i)));
             }
         }
-        int testIndex = regex.get(0).match(inputLine);
-        for (RegexMatcher matcher : regex) {
-            if (testIndex == -1 || !matcher.check(inputLine.charAt(testIndex))) {
-                return false;
+        int startMatchIndex = -1;
+        while (true) {
+            int testIndex = isStart ? 0 : regex.getFirst().match(inputLine, startMatchIndex + 1);
+            startMatchIndex = testIndex;
+            boolean matches = true;
+            for (RegexMatcher matcher : regex) {
+                if (testIndex == -1 || testIndex >= inputLine.length() || !matcher.check(inputLine.charAt(testIndex))) {
+                    matches = false;
+                    break;
+                }
+                testIndex++;
             }
-            testIndex++;
+            if (matches) {
+                return true;
+            } else {
+                if (testIndex == -1 || testIndex >= inputLine.length() || isStart) {
+                    return true;
+                }
+            }
         }
-        return true;
     }
 }
